logout and top nav collapse error fixed

--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -9,7 +9,6 @@
 .navbar-brand, .navbar-brand:hover {
      font-family: 'allogistlight';
      color: #fffdf3;
-     margin-right: 380px;
      font-size: 24px;
    }
 
